# zooparallel

./: Cargo.toml  README.md  RFC_ZOOSYNC.md  lint.sh  pyproject.toml
.github/workflows/: release.yml
benchmarks/: bench_lock.py  bench_pool.py  bench_queue.py
docs/: adapters.md  locks.md  pool.md  user-guide.md
docs/adr/: 001-hybrid-architecture.md  002-robust-mutexes.md
src/zooparallel/: lock.py  pool.py  queue.py
src/zooparallel_core/: lib.rs  pool.rs  queue.rs  shm.rs  sync.rs
src/zoosync/: __init__.py  pool.py
src/zoosync_core/: lib.rs  pool.rs  queue.rs  shm.rs  sync.rs
tests/: stress_view_gc.py  test_crash.py  test_lifecycle.py  test_pool.py  test_queue.py  test_restart.py  test_robustness.py
zoosync/: pool.py
