[project]
name = "zoosync"
version = "0.1.0"
description = "High performance multiprocessing primitives"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[tool.maturin]
python-source = "src"
module-name = "zoosync.zoosync_core"

[dependency-groups]
dev = [
    "maturin>=1.11.5",
    "pytest>=8.0.0",
    "ruff>=0.2.0",
]
